# rpa-challenge

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/rpachallenge/: __about__.py  data_handler.py  run.py  steps.txt  web_handler.py
tests/: __init__.py  test_web_handler.py
