[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpachallenge"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Mervi Niva", email = "mervi_niva@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Mervi Niva/rpachallenge#readme"
Issues = "https://github.com/Mervi Niva/rpachallenge/issues"
Source = "https://github.com/Mervi Niva/rpachallenge"

[tool.hatch.version]
path = "src/rpachallenge/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/rpachallenge tests}"

[tool.coverage.run]
source_pkgs = ["rpachallenge", "tests"]
branch = true
parallel = true
omit = [
  "src/rpachallenge/__about__.py",
]

[tool.coverage.paths]
rpachallenge = ["src/rpachallenge", "*/rpachallenge/src/rpachallenge"]
tests = ["tests", "*/rpachallenge/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
